--- a/src/styles.css
+++ b/src/styles.css
@@ -376,4 +376,12 @@ positionrelative;} */
     padding: 8px 9px;
     background: #eaeaea;
     border-radius: 50%;
-} 
+}
+
+.chat .chat-details .chat-response {
+  white-space: pre-wrap;
+  font-size: 1rem;
+  padding-left: 16px;
+  color: var(--text-color);
+  word-break: break-word;
+}
